--- a/doge-mcgee.html
+++ b/doge-mcgee.html
@@ -13,8 +13,8 @@
     <img class="profile" src="imgs/doge-square.jpg">
     <h4 class = "profile-name">Doge McGee</h4>
     <ul class="nav nav-pills flex-column">
-      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Profile</button>
-      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary active">Browse</button>
+      <button type="button" onclick="location.href='doge-mcgee.html';"class="btn btn-outline-primary active">Profile</button>
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Browse</button>
       <button type="button" onclick="location.href='app.html';" class="btn btn-outline-primary">Applications</button>
       <button type="button" onclick="location.href='requests.html';"class="btn btn-outline-primary">Requested</button>
       <button type="button" onclick="location.href='friends.html';"class="btn btn-outline-primary">Friends</button>
