--- a/doge-mcgee.html
+++ b/doge-mcgee.html
@@ -71,7 +71,7 @@
         <h3>Age</h3>
         <p>4</p>
         <h3>Notes: </h3>
-        <p>Great at fetching tennis balls</p>
+        <p>Loves a good meme lol</p>
         <button type="button" class="btn btn-outline-info">Add Friend</button>
                 <button type="button" class="btn btn-outline-info" onclick="window.location.href = 'index.html';">Back</button>
       </div>
