--- a/fluffy-bro.html
+++ b/fluffy-bro.html
@@ -61,7 +61,7 @@
         <img class="profile-picture" data-image="thumbnail" src="imgs/good_boi-square.jpg" alt="Doge McGee">
       <div class="profile-description">
         <h3>Dog Name</h3>
-        <p>Fluffy Bro/p>
+        <p>Fluffy Bro</p>
         <h3>Owner Name: </h3>
         <p>Bijorn Unicorn</p>
         <h3>Breed: </h3>
