--- a/requests.html
+++ b/requests.html
@@ -14,9 +14,9 @@
     <h4 class = "profile-name">Doge McGee</h4>
     <ul class="nav nav-pills flex-column">
       <button type="button" onclick="location.href='doge-mcgee.html';"class="btn btn-outline-primary">Profile</button>
-      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary active">Browse</button>
+      <button type="button" onclick="location.href='index.html';"class="btn btn-outline-primary">Browse</button>
       <button type="button" onclick="location.href='app.html';" class="btn btn-outline-primary">Applications</button>
-      <button type="button" onclick="location.href='requests.html';"class="btn btn-outline-primary">Requested</button>
+      <button type="button" onclick="location.href='requests.html';"class="btn btn-outline-primary active">Requested</button>
       <button type="button" onclick="location.href='friends.html';"class="btn btn-outline-primary">Friends</button>
       <!-- <li class="nav-item">
         <a href="index.html">Profile</a>
